syntax = "proto3";

package pb;

import "google/api/annotations.proto";

service FxGateway {
  rpc Invoke(InvokeServiceRequest) returns(Message) {
      option (google.api.http) = {
      post: "/api/invoke/{Service}"
      body: "*" 
    };
  }
  rpc Create(CreateNamespaceRequest) returns(Message) {
      option (google.api.http) = {
      post: "/api/createns/{NamespaceName}"
      body: "*" 
    };
  }
  rpc Login(LoginRequest) returns(LoginResponse) {
    option (google.api.http) = {
      post: "/api/login"
      body: "*"
    };
  }
  rpc StartIDE(StartRequest) returns(StartResponse){
    option (google.api.http) = {
      post: "/api/requestIDE-URL"
      body: "*"
    };
  } 
  rpc ExitIDE(ExitRequest) returns(ExitResponse) {
    option (google.api.http) = {
	    post: "/api/exit" 
    };
  }
  rpc List(TokenRequest) returns(Functions) {
    option (google.api.http) = {
      post: "/api/list"
      body: "*" 
    };
  }
  rpc Deploy(CreateFunctionRequest) returns(Message) {
    option (google.api.http) = {
      post: "/api/deploy"
      body: "*"
    };
  }
  rpc Delete(DeleteFunctionRequest) returns(Message) {
    option (google.api.http) = {
      post: "/api/delete/{FunctionName}"
      body: "*"
    };
  }
  rpc Update(CreateFunctionRequest) returns(Message) {
    option (google.api.http) = {
      post: "/api/update"
      body: "*"
    };
  }
  rpc GetMeta(FunctionRequest) returns(Function) {
    option (google.api.http) = {
      get: "/system/function/{FunctionName}"
    };
  }
  rpc GetLog(FunctionRequest) returns(Message) {
    option (google.api.http) = {
      get: "/system/function-log/{FunctionName}"
    };
  }
  rpc ReplicaUpdate(ScaleServiceRequest) returns(Message) {
    option (google.api.http) = {
      put: "/system/scale-function"
      body: "*"
    };
  }
  rpc Info(Empty) returns(Message) {
    option (google.api.http) = {
      get: "/system/info"
    };
  }
  rpc HealthCheck(Empty) returns(Message) {
    option (google.api.http) = {
      get: "/healthz"
    };
  }
}
message Empty {}

message Message {
  string Msg = 1;
}

message Messages{
  bytes Output = 1; 
}

message TokenRequest{
  string token = 1; 
} 

message CreateFunctionRequest {
  string Service = 1;
  string Image = 2;
  map<string, string> EnvVars = 3;
  map<string, string> Labels = 4;
  map<string, string> Annotations = 5;
  repeated string Constraints = 6;
  repeated string Secrets = 7;
  string RegistryAuth = 8;
  FunctionResources Limits = 9;
  FunctionResources Requests = 10;
  int32 MinReplicas = 11;
  int32 MaxReplicas = 12;
  string token = 13; 
}

message CreateNamespaceRequest {
  string NamespaceName = 1;
}

message LoginRequest {                                                                                                                 
  string token = 1;
  string Member = 2;
}                                                                                                                                                

message LoginResponse {
  string Msg = 1;
}

message StartRequest {
  string token = 1;
}

message StartResponse {
  string IDE = 1;
}

message ExitRequest {
  string token = 1; 
}

message ExitResponse {
  string Msg = 1;
}

message DeleteFunctionRequest {
  string FunctionName = 1;
  string token = 2; 
}


message ScaleServiceRequest {
  string ServiceName = 1;
  uint64 Replicas = 2;
  string token = 3;
}

message InvokeServiceRequest {
  string Service = 1;
  bytes Input = 2;
  string token = 3; 
}

message FunctionRequest {
  string FunctionName = 1;
}

message Functions {
  repeated Function Functions = 1;
}

message Function {
  string Name = 1;
  string Image = 2;
  uint64 InvocationCount = 3;
  uint64 Replicas = 4;
  uint64 AvailableReplicas = 5;
  map<string, string> Annotations= 6;
  map<string, string> Labels = 7;
}

message FunctionResources {
  string Memory = 1;
  string CPU = 2;
  string GPU = 3;
}


